Feat/66 chat refactor fix (#67)
* fix(user): fix bugs by refactoring

* fix(user-test): chore usercontroller test

* chore(userControllerTest): chore userControllerTest